hard-gists/37931/run.log
=== Docker Run Log for 37931 ===
Started at: Mi 29. Okt 13:59:55 CET 2025

[2025-10-29 13:59:55] START: Running container for 37931
[2025-10-29 13:59:56] SUCCESS: Container 220d1c6b513a09d53f6a8e624425823c4e9fa2fd65f9f9d0ea4c956e85c8425b started for 37931
=== Container logs for 37931 ===
  File "/snippet.py", line 50
    print "套用輸入法設定到" + user_name + "..."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 37931 ===
[2025-10-29 13:59:58] INFO: Container 220d1c6b513a09d53f6a8e624425823c4e9fa2fd65f9f9d0ea4c956e85c8425b has stopped
